Archive2/67/e5327da7673e41/output
main.cpp:9:19: error: use of undeclared identifier 'e'
    std::cout << (e - b) << std::endl;
                  ^
main.cpp:9:23: error: use of undeclared identifier 'b'
    std::cout << (e - b) << std::endl;
                      ^
2 errors generated.
